--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,10 +2,14 @@
 <resources>
     <string name="app_name">ship</string>
     <string name="APP_TITLE">SHIPS</string>
-    <string name="START_BUTTON_LABEL">Start</string>
-    <string name="HS_BUTTON_LABEL">High Scores</string>
-    <string name="CREDITS_BUTTON_LABEL">Credits</string>
-    <string name="EXIT_BUTTON_LABEL">Exit</string>
+    <string name="MENU_START_BUTTON_LABEL">Start</string>
+    <string name="MENU_START_BUTTON"> </string>
+    <string name="MENU_HS_BUTTON_LABEL">High Scores</string>
+    <string name="MENU_HS_BUTTON"> </string>
+    <string name="MENU_CREDITS_BUTTON_LABEL">Credits</string>
+    <string name="MENU_CREDITS_BUTTON"> </string>
+    <string name="MENU_EXIT_BUTTON_LABEL">Exit</string>
+    <string name="MENU_EXIT_BUTTON"> </string>
     <string name="SCELETONE_LOGO_TEXTURE">ship</string>
     <string name="FONT_BASE_ASSET_PATH">fonts/</string>
     <string name="FONT_PLOK_FILE">Plok.ttf</string>
