--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2,8 +2,9 @@
 <resources>
     <string name="app_name">ship</string>
     <string name="APP_TITLE">SHIPS</string>
-    <string name="START_BUTTON_LABEL">Старт</string>
-    <string name="HS_BUTTON_LABEL">Рекорды</string>
-    <string name="CREDITS_BUTTON_LABEL">Титры</string>
-    <string name="EXIT_BUTTON_LABEL">Выход</string>
+    <!--Menu Button Labels-->
+    <string name="MENU_START_BUTTON_LABEL">Старт</string>
+    <string name="MENU_HS_BUTTON_LABEL">Рекорды</string>
+    <string name="MENU_CREDITS_BUTTON_LABEL">Титры</string>
+    <string name="MENU_EXIT_BUTTON_LABEL">Выход</string>
 </resources>
