--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="MENU_EXIT_BUTTON_LABEL">Exit</string>
     <!--Game Button ID-->
     <string name="GAME_PAUSE_BUTTON">pauseID</string>
+    <string name="GAME_PAUSE_BACK_BUTTON">backID</string>
+    <string name="GAME_PAUSE_MENU_BUTTON">menuID</string>
 </resources>
