--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="GAME_PAUSE_BUTTON">pauseID</string>
     <string name="GAME_PAUSE_BACK_BUTTON">backID</string>
     <string name="GAME_PAUSE_MENU_BUTTON">menuID</string>
+    <string name="GAME_FIRE_BUTTON">fireID</string>
+    <string name="GAME_MOVE_BUTTON">moveID</string>
 </resources>
