--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="GAME_PAUSE_BACK_BUTTON">backID</string>
     <string name="GAME_PAUSE_MENU_BUTTON">menuID</string>
     <string name="GAME_FIRE_BUTTON">fireID</string>
-    <string name="GAME_MOVE_BUTTON">moveID</string>
+    <string name="GAME_LEFT_BUTTON">leftID</string>
+    <string name="GAME_RIGHT_BUTTON">rightID</string>
 </resources>
