--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="GAME_FIRE_BUTTON">fireID</string>
     <string name="GAME_LEFT_BUTTON">leftID</string>
     <string name="GAME_RIGHT_BUTTON">rightID</string>
+    <string name="GAME_TEST_BUTTON">rightID</string>
 </resources>
