--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -7,4 +7,6 @@
     <string name="MENU_HS_BUTTON_LABEL">Рекорды</string>
     <string name="MENU_CREDITS_BUTTON_LABEL">Титры</string>
     <string name="MENU_EXIT_BUTTON_LABEL">Выход</string>
+    <!--GameScene-->
+    <string name="SCORE">Очки</string>
 </resources>
