--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="MENU_HS_BUTTON_LABEL">High Scores</string>
     <string name="MENU_CREDITS_BUTTON_LABEL">Credits</string>
     <string name="MENU_EXIT_BUTTON_LABEL">Exit</string>
+    <!--GameScene-->
+    <string name="SCORE">Score</string>
     <!--Game Button ID-->
     <string name="GAME_PAUSE_BUTTON">pauseID</string>
     <string name="GAME_PAUSE_BACK_BUTTON">backID</string>
