--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -9,4 +9,7 @@
     <string name="MENU_EXIT_BUTTON_LABEL">Выход</string>
     <!--GameScene-->
     <string name="SCORE">Очки</string>
+    <!--GameOver Button Labels-->
+    <string name="GAME_OVER_MENU_BUTTON_LABEL">Меню</string>
+    <string name="GAME_OVER_EXIT_BUTTON_LABEL">Выход</string>
 </resources>
