--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="MENU_EXIT_BUTTON_LABEL">Exit</string>
     <!--GameScene-->
     <string name="SCORE">Score</string>
+    <string name="LEVEL">Level</string>
+    <string name="GOAL">Goal</string>
     <!--Game Button ID-->
     <string name="GAME_PAUSE_BUTTON">pauseID</string>
     <string name="GAME_PAUSE_BACK_BUTTON">backID</string>
