--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,9 +25,9 @@
     <string name="GAME_RIGHT_BUTTON">rightID</string>
     <string name="GAME_BORDER_BUTTON">borderID</string>
     <!--GameOver Button ID-->
-    <string name="GAME_OVER_MENU_BUTTON">gameovermenuID</string>
+    <string name="GAME_OVER_RESTART_BUTTON">gameoverrestartID</string>
     <string name="GAME_OVER_EXIT_BUTTON">gameoverexitID</string>
     <!--GameOver Button Labels-->
-    <string name="GAME_OVER_MENU_BUTTON_LABEL">Menu</string>
+    <string name="GAME_OVER_RESTART_BUTTON_LABEL">Restart</string>
     <string name="GAME_OVER_EXIT_BUTTON_LABEL">Exit</string>
 </resources>
