--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -10,6 +10,6 @@
     <!--GameScene-->
     <string name="SCORE">Очки</string>
     <!--GameOver Button Labels-->
-    <string name="GAME_OVER_RESTART_BUTTON_LABEL">Еще раз</string>
+    <string name="GAME_OVER_RESTART_BUTTON_LABEL">Новая игра</string>
     <string name="GAME_OVER_EXIT_BUTTON_LABEL">Выход</string>
 </resources>
