Оптимизация вывода класса Level

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
     <!--GameScene-->
     <string name="SCORE">Score</string>
     <string name="LEVEL">Level</string>
-    <string name="GOAL">Goal</string>
+    <string name="LEFT">Left</string>
     <string name="NEW_LEVEL_MESSAGE">New level </string>
     <!--Game Button ID-->
     <string name="GAME_PAUSE_BUTTON">pauseID</string>
