--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -10,7 +10,7 @@
     <!--GameScene-->
     <string name="SCORE">Очки</string>
     <string name="LEVEL">Уровень</string>
-    <string name="GOAL">Цель</string>
+    <string name="LEFT">Осталось</string>
     <string name="NEW_LEVEL_MESSAGE">Новый уровень </string>
     <!--GameOver Button Labels-->
     <string name="GAME_OVER_RESTART_BUTTON_LABEL">Новая игра</string>
