--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,4 +33,6 @@
     <!--GameOver Button Labels-->
     <string name="GAME_OVER_RESTART_BUTTON_LABEL">Restart</string>
     <string name="GAME_OVER_EXIT_BUTTON_LABEL">Exit</string>
+    <string name="WIN_LABEL">You Win!!!</string>
+    <string name="LOOSE_LABEL">You Loose!!!</string>
 </resources>
