--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="SCORE">Score</string>
     <string name="LEVEL">Level</string>
     <string name="LEFT">Left</string>
-    <string name="NEW_LEVEL_MESSAGE">New level </string>
+    <string name="NEW_LEVEL_MESSAGE">Level</string>
     <!--Game Button ID-->
     <string name="GAME_PAUSE_BUTTON">pauseID</string>
     <string name="GAME_PAUSE_BACK_BUTTON">backID</string>
