--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="MENU_HS_BUTTON_LABEL">High Scores</string>
     <string name="MENU_CREDITS_BUTTON_LABEL">Credits</string>
     <string name="MENU_EXIT_BUTTON_LABEL">Exit</string>
+    <string name="NO_RECORDS">No records</string>
     <!--GameScene-->
     <string name="SCORE">Score</string>
     <string name="LEVEL">Level</string>
