--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -14,7 +14,7 @@
     <string name="LEFT">Осталось</string>
     <string name="NEW_LEVEL_MESSAGE">Уровень</string>
     <string name="TYPE_NAME">Введите свое имя</string>
-    <string name="IN_TOP">Вы попали в топ-10, Ваше имя:</string>
+    <string name="IN_TOP">Ваше имя:</string>
     <!--GameOver Button Labels-->
     <string name="GAME_OVER_RESTART_BUTTON_LABEL">Новая игра</string>
     <string name="GAME_OVER_EXIT_BUTTON_LABEL">Выход</string>
