--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -12,6 +12,7 @@
     <string name="LEVEL">Уровень</string>
     <string name="LEFT">Осталось</string>
     <string name="NEW_LEVEL_MESSAGE">Уровень</string>
+    <string name="BONUS_LEVEL">Бонусный</string>
     <!--GameOver Button Labels-->
     <string name="GAME_OVER_RESTART_BUTTON_LABEL">Новая игра</string>
     <string name="GAME_OVER_EXIT_BUTTON_LABEL">Выход</string>
